--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 - easy_install -U pip
 - pip install pytest>=2.6.4 pytest-pep8 pytest-cov coveralls
 script:
-- py.test --pep8 --cov ./src --cov-config=.coveragerc src/camdict/test.py
+- py.test --pep8 --cov ./src --cov-config=.coveragerc src/camdict/tests.py
 after_success:
 - coveralls
 notifications:
